[gd_scene load_steps=3 format=3 uid="uid://dygnsu35pmuh2"]

[ext_resource type="Script" uid="uid://pwiarli23iae" path="res://scripts/menu.gd" id="1_ndaup"]
[ext_resource type="Script" uid="uid://icj8vc2y200l" path="res://scripts/serverBrowser.gd" id="2_0tp6w"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ndaup")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -209.0
offset_right = 84.0
grow_horizontal = 2
grow_vertical = 0

[node name="ListenPortLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bound to Listen Port: "
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Player Name"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Host"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="ServerBrowser" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_0tp6w")

[node name="BroadcastTimer" type="Timer" parent="ServerBrowser"]

[node name="ServersPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -417.0
offset_top = -278.0
offset_right = 418.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ServersPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="ServerNameLabel" type="Label" parent="ServersPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server Name"

[node name="ServerIPLabel" type="Label" parent="ServersPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server IP"

[node name="PlayerCountLabel" type="Label" parent="ServersPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Count"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="ServerBrowser/BroadcastTimer" to="ServerBrowser" method="_on_broadcast_timer_timeout"]
